--- a/yt_player_classicifier.user.css
+++ b/yt_player_classicifier.user.css
@@ -142,6 +142,12 @@
         transform: unset;
     }
     
+    //New
+    
+    .ytp-promotooltip-container {
+        border-radius: 2px;
+    }
+    
     //Precise seeking killer
     
     .ytp-fine-scrubbing-container {display:none}
